tests/snapshots/conformance__n_object_missing_key.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{:"b"}
stdout --- 
<empty>
stderr --- 
error: expected key or closed curly brace, found `:`
 --> stdin:1:2
  |
1 | {:"b"}
  | -^
  | |
  | expected due to `{`
